--- a/view/adminhtml/web/fonts/iconfont/style.css
+++ b/view/adminhtml/web/fonts/iconfont/style.css
@@ -10,7 +10,7 @@
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="mageicon_"], [class*=" mageicon_"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: never;
@@ -25,7 +25,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-logo:before {
+.mageicon_logo:before {
   content: "\e900";
   color: #de774c;
 }
