--- a/view/adminhtml/web/css/source/_module.less
+++ b/view/adminhtml/web/css/source/_module.less
@@ -1,16 +1,7 @@
-@import '../../fonts/iconfont/style.css';
-
-.magenable-extensions .admin__page-nav-title.title._collapsible {
-    display: flex;
-    align-items: center;
+.magenable-extensions .admin__page-nav-title strong:before {
+    content:           "";
+    background-image:  url("Magenable_Base::images/magenable_logo.svg");
+    background-size:   auto 20px;
+    background-repeat: no-repeat;
+    padding-left:      25px;
 }
-
-.magenable-extensions .admin__page-nav-title.title._collapsible::before {
-    display: block;
-    content: '\e900';
-    font-family: 'magenable';
-    margin-right: 10px;
-    font-size: 18px;
-    color: #de774cff;
-}
-
